<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">AllPhoto 4K</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="app_email">info@camano.uz</string>
    <string name="app_copyright">Copyright &#169; 2020 Camano Group \n All rights reserved</string>
    <string name="admob_publisher_id">pub-9486689248960561</string>
    <string name="admob_app_id">ca-app-pub-9486689248960561~5400247368</string>
    <string name="admob_banner_unit_id">ca-app-pub-9486689248960561/2774084022</string>
    <string name="admob_interstitial_unit_id">ca-app-pub-9486689248960561/8952479569</string>
    <string name="tab_category">Category</string>
    <string name="tab_recent">Recent</string>
    <string name="tab_featured">Featured</string>
    <string name="tab_popular">Popular</string>
    <string name="tab_shuffle">Random</string>
    <string name="play_more_apps">https://play.google.com/store/apps/dev?id=4871218971241874482</string>
    <string name="privacy_policy_url">https://allphoto4k.camano.uz/privacy-policy</string>
    <string name="drawer_explore">Explore</string>
    <string name="drawer_favorite">Favorite</string>
    <string name="drawer_rate">Rate</string>
    <string name="drawer_more">More</string>
    <string name="drawer_share">Share</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_sub_row">Other</string>
    <string name="msg_network_error">There is something wrong with your network connection or the server is currently down!</string>
    <string name="msg_please_wait">Please Wait&#8230;</string>
    <string name="msg_offline">You\'re offline</string>
    <string name="option_retry">RETRY</string>
    <string name="no_favorite_found">What is your favorite&#8230; ?</string>
    <string name="favorite_added">Added to favorite</string>
    <string name="favorite_removed">Removed from favorite</string>
    <string name="share_text">Here my favorite wallpaper, check this out!</string>
    <string name="image_zoom">Zoom</string>
    <string name="saved_folder_name">Material Wallpaper</string>
    <string name="desc">desc</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="txt_resolution">Resolution</string>
    <string name="txt_views">Views</string>
    <string name="txt_downloads">Downloads</string>
    <string name="permisson_title">Permission Required!</string>
    <string name="permisson_message">this app required to access storage!</string>
    <string name="dialog_close_msg">Are you sure you want to quit?</string>
    <string name="dialog_option_yes">Yes</string>
    <string name="dialog_option_ok">OK</string>
    <string name="dialog_option_cancel">Cancel</string>
    <string name="dialog_option_rate_us">Rate Us</string>
    <string name="dialog_option_more">More Apps</string>
    <string name="msg_confirm_download">Are you sure want to download this wallpaper?</string>
    <string name="alert_download">You cannot download this wallpaper when you offline, please enable your network first!</string>
    <string name="alert_share">You cannot share this wallpaper when you offline, please enable your network first!</string>
    <string name="msg_apply_wallpaper">Setting wallpaper&#8230;</string>
    <string name="msg_success">Wallpaper set successfully</string>
    <string name="msg_failed">Wallpaper not set</string>
    <string name="msg_title_set_wallpaper">Set this image as wallpaper?</string>
    <string name="option_yes">Yes</string>
    <string name="popup_crop_wallpaper">Crop Wallpaper</string>
    <string name="popup_apply_wallpaper">Quick Apply</string>
    <string name="download_permission_explaination">In order to download files, you need to grant us permission to your storage.\n\nAfter granting us access, you may go ahead and download the file.</string>
    <string name="download_permission_grant">Grant permission</string>
    <string name="download_unavailable">You can not download this content</string>
    <string name="download_failed">Download failed</string>
    <string name="download_open_failed">No app to handle file</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="title_menu_search">Search&#8230;</string>
    <string name="menu_search">Search</string>
    <string name="msg_clear_cache">Are you sure want to clear cache?</string>
    <string name="menu_settings_notification">Enable Push Notification</string>
    <string name="menu_settings_clear_cache">Clear Cache</string>
    <string name="menu_settings_privacy_policy">Privacy Policy</string>
    <string name="menu_settings_about">About</string>
    <string name="msg_clearing_cache">Clearing cache</string>
    <string name="msg_cache_cleared">cache has been cleared</string>
    <string name="txt_tags">Tags</string>
    <string name="txt_home_screen">Home screen</string>
    <string name="txt_lock_screen">Lock Screen</string>
    <string name="txt_both">Both</string>
</resources>
