<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/custom_dialog_layout_design_user_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_padding"
            android:layout_marginStart="@dimen/dialog_padding"
            android:text="@string/set_wallpaper"
            android:textColor="@color/dialog_text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lyt_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/menu_set_home_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="@color/colorPrimary"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_height"
                android:layout_marginLeft="@dimen/dialog_padding"
                android:layout_marginStart="@dimen/dialog_padding"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_set_home_screen"
                    android:tint="@color/dialog_icon_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dialog_padding"
                    android:layout_marginStart="@dimen/dialog_padding"
                    android:text="@string/txt_home_screen"
                    android:textColor="@color/dialog_text_color"
                    android:textSize="16sp" />

            </LinearLayout>

        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/menu_set_lock_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="@color/colorPrimary"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_height"
                android:layout_marginLeft="@dimen/dialog_padding"
                android:layout_marginStart="@dimen/dialog_padding"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_set_lock_screen"
                    android:tint="@color/dialog_icon_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dialog_padding"
                    android:layout_marginStart="@dimen/dialog_padding"
                    android:text="@string/txt_lock_screen"
                    android:textColor="@color/dialog_text_color"
                    android:textSize="16sp" />

            </LinearLayout>

        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/menu_set_both"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="@color/colorPrimary"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_height"
                android:layout_marginLeft="@dimen/dialog_padding"
                android:layout_marginStart="@dimen/dialog_padding"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_set_both"
                    android:tint="@color/dialog_icon_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dialog_padding"
                    android:layout_marginStart="@dimen/dialog_padding"
                    android:text="@string/txt_both"
                    android:textColor="@color/dialog_text_color"
                    android:textSize="16sp" />

            </LinearLayout>

        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyt_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dialog_padding"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_padding"
            android:layout_marginStart="@dimen/dialog_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_padding"
            android:layout_marginStart="@dimen/dialog_padding"
            android:text="@string/msg_apply_wallpaper"
            android:textColor="@color/dialog_text_color"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>