<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize" />

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="@color/ripple_color"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="@string/menu_settings_notification"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/switch_notif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

    </com.balysv.materialripple.MaterialRippleLayout>

    <include layout="@layout/include_row_separator" />

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="@color/ripple_color"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/btn_clear_cache"
                android:layout_toLeftOf="@+id/btn_clear_cache">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/menu_settings_clear_cache"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_cache_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="10 MB"
                    android:textSize="16sp" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/btn_clear_cache"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_delete"
                android:tint="#b9b9b9" />

        </RelativeLayout>

    </com.balysv.materialripple.MaterialRippleLayout>

    <include layout="@layout/include_row_separator" />

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/lyt_privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="@color/ripple_color"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_settings_privacy_policy"
                android:textSize="16sp" />

        </LinearLayout>

    </com.balysv.materialripple.MaterialRippleLayout>

    <include layout="@layout/include_row_separator" />

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/lyt_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="@color/ripple_color"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_settings_about"
                android:textSize="16sp" />

        </LinearLayout>

    </com.balysv.materialripple.MaterialRippleLayout>

    <include layout="@layout/include_row_separator" />

</LinearLayout>