<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#4D000000"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="60dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:id="@+id/img_thumb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/lyt_expand"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <View
                android:layout_width="30dp"
                android:layout_height="5dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:alpha="0.8"
                android:background="@drawable/swipe_up_handle"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/lyt_action"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="7">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/category_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:minHeight="50dp"
                        android:padding="10dp"
                        android:text="Category"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/btn_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="10dp"
                        android:src="@drawable/ic_arrow_share" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/btn_download"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="10dp"
                        android:src="@drawable/ic_download" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/btn_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="10dp"
                        android:src="@drawable/ic_set_wallpaper" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/btn_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="10dp"
                        android:src="@drawable/ic_star_outline" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txt_views"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txt_view_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txt_downloads"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txt_download_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txt_resolution"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txt_resolution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_tags"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
